--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -111,7 +111,7 @@ p a,
     img {
       display: inline-block;
       height: auto;
-      transform: translateY(0.2em);
+      transform: translateY(.1em);
     }
   }
 }
