--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -19,11 +19,77 @@ body {
   line-height: 1.8;
   padding: var(--editor-padding);
 
+  // =============================================================================
+  // INLINE
+  // =============================================================================
+
+  code:not([role=textbox]) {
+    display: inline-block;
+    background: rgb(0 0 0 / 7%);
+    font-family: var(--ff-mono);
+    font-size: .75em;
+    line-height: inherit;
+    word-wrap: break-word;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    padding: .125em .25em;
+    border-radius: 2px;
+    transform: translateY(-1px);
+  }
+
+  kbd {
+    display: inline-block;
+    background: rgb(0 0 0 / 7%);
+    font-family: var(--ff-mono);
+    font-size: .75em;
+    font-weight: 700;
+    letter-spacing: 0;
+    white-space: nowrap;
+    padding: 0 0.375em;
+    border-radius: 3px;
+    box-shadow: 0 0 1px currentColor, 0 1px 1px rgb(0 0 0 / 20%);
+    transform: translateY(-1px);
+  }
+
+  sup[data-fn] {
+    display: inline-block;
+    font-weight: 700;
+    padding-left: .15em;
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  p.has-drop-cap::first-letter {
+    position: static;
+    float: left;
+    display: block;
+    font-size: 3.75em;
+    font-weight: inherit;
+    line-height: .9;
+    padding: 0 .05em 0 0;
+    margin: 0;
+  }
+
+  p {
+    img:not(.wp-more-tag) {
+      display: inline-block;
+      height: auto;
+      transform: translateY(0.1em);
+    }
+  }
+
+  // =============================================================================
+  // GENERAL
+  // =============================================================================
+
   .wp-block {
     margin: 28px auto;
     max-width: var(--editor-max-width);
 
     figcaption {
+      color: rgb(0 0 0 / 70%);
       font-size: 75%; // Scales with custom formatting
       line-height: 1.3;
       text-align: center;
@@ -32,11 +98,51 @@ body {
     }
   }
 
+  // =============================================================================
+  // HEADINGS
+  // =============================================================================
+
   :where(h1, h2, h3, h4, h5, h6) {
-    line-height: 1.5;
+    display: block;
+    font-weight: 700;
+    line-height: 1.3;
+
+    > strong {
+      font-weight: 700;
+    }
   }
 
+  h1 {
+    font-size: get_relative_clamp(1.5, 2.25, 320, $full-width, 'vw', 'em');
+    letter-spacing: get_clamp(-0.48, 0.8, 320, 375);
+  }
+
+  h2 {
+    font-size: get_relative_clamp(1.25, 1.75, 320, $full-width, 'vw', 'em');
+  }
+
+  h3 {
+    font-size: get_relative_clamp(1.2, 1.4, 320, $full-width, 'vw', 'em');
+  }
+
+  h4 {
+    font-size: get_relative_clamp(1.1, 1.2, 320, $full-width, 'vw', 'em');
+  }
+
+  h5 {
+    font-size: get_relative_clamp(1.05, 1.125, 320, $full-width, 'vw', 'em');
+  }
+
+  h6 {
+    font-size: 1em;
+  }
+
+  // =============================================================================
+  // SEPARATORS
+  // =============================================================================
+
   .wp-block-separator {
+    margin: 48px auto;
     border: 0;
     border-bottom: var(--layout-hr-border);
     border-color: rgb(0 0 0 / 30%);
@@ -61,6 +167,10 @@ body {
     }
   }
 
+  // =============================================================================
+  // IMAGES
+  // =============================================================================
+
   .wp-block-image {
     &.alignright {
       float: right;
@@ -77,12 +187,138 @@ body {
     }
   }
 
-  p.has-drop-cap::first-letter {
-    font-size: 3.75em !important;
-    line-height: 0.8;
-    padding-right: .05em;
+  // =============================================================================
+  // CODE BLOCK
+  // =============================================================================
+
+  .wp-block-code {
+    padding: 1rem;
+    border-radius: var(--layout-border-radius-small);
+    overflow: auto;
+
+    code {
+      display: block;
+      font-family: var(--ff-mono);
+      line-height: 1.7;
+      white-space: pre !important;
+      border-radius: var(--layout-border-radius-small);
+    }
+
+    &:not([class*=font-size]) {
+      code {
+        font-size: var(--fs-xxs);
+      }
+    }
+
+    &:not([class*=background-color]) {
+      background: #e5e5e5;
+    }
+
+    &:not([class*=text-color]) {
+      color: #444;
+    }
   }
 }
+
+// =============================================================================
+// TABLES
+// =============================================================================
+
+.wp-block-table {
+  float: none !important;
+  overflow-x: auto;
+
+  &.alignright {
+    margin-left: auto;
+    margin-right: calc((100% - min(100%, var(--editor-max-width))) / 2);
+  }
+
+  &.alignleft {
+    margin-left: calc((100% - min(100%, var(--editor-max-width))) / 2);
+    margin-right: calc((100% - min(100%, var(--editor-max-width))) / 2);
+  }
+
+  &:where(.min-480, .min-640, .min-768) {
+    min-width: unset; // Delegate to table child
+  }
+
+  &.min-480 table {
+    min-width: 480px;
+  }
+
+  &.min-640 table {
+    min-width: 640px;
+  }
+
+  &.min-768 table {
+    min-width: 768px;
+  }
+
+  table {
+    font-size: 75%; // Scales with custom formatting
+    border-style: solid;
+    border-color: rgb(0 0 0 / 30%);
+    border-collapse: collapse;
+
+    @include bp(480px) {
+      font-size: 87.5%; // Scales with custom formatting
+    }
+  }
+
+  :is(thead, tbody, tfoot, tr, td, th) {
+    border-style: inherit;
+    border-color: inherit;
+    overflow-wrap: break-word;
+  }
+
+  :is(th, td) {
+    padding: .5em .75em;
+  }
+
+  thead {
+    border-bottom-width: 0;
+  }
+
+  tfoot {
+    font-weight: 700;
+    vertical-align: top;
+    border-top-width: 3px;
+  }
+
+  th {
+    font-weight: 700;
+    vertical-align: bottom;
+  }
+
+  figcaption {
+    padding-bottom: .5rem; // Place for scrollbar on mobile
+  }
+
+  &.is-style-stripes {
+    border-bottom: none;
+
+    tfoot {
+      border-top-color: rgb(0 0 0 / 50%);
+    }
+
+    tbody {
+      tr {
+        &:nth-child(odd) {
+          background: rgb(0 0 0 / 15%);
+        }
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
 
 // Automatically becomes .editor-styles-wrapper
 // body {
@@ -107,64 +343,11 @@ body {
 //     max-width: min(calc(100% - 16px), calc(var(--site-width) - 2 * var(--layout-spacing-horizontal)));
 //   }
 
-//   :is(h1, h2, h3, h4, h5, h6) {
-//     display: block;
-//     font-weight: 700;
-//     line-height: 1.3;
 
-//     > strong {
-//       font-weight: 700;
-//     }
-//   }
 
-//   h1 {
-//     font-size: get_relative_clamp(1.5, 2.25, 320, $full-width, 'vw', 'em');
-//     letter-spacing: get_clamp(-0.48, 0.8, 320, 375);
-//   }
 
-//   h2 {
-//     font-size: get_relative_clamp(1.25, 1.75, 320, $full-width, 'vw', 'em');
-//   }
 
-//   h3 {
-//     font-size: get_relative_clamp(1.2, 1.4, 320, $full-width, 'vw', 'em');
-//   }
 
-//   h4 {
-//     font-size: get_relative_clamp(1.1, 1.2, 320, $full-width, 'vw', 'em');
-//   }
-
-//   h5 {
-//     font-size: get_relative_clamp(1.05, 1.125, 320, $full-width, 'vw', 'em');
-//   }
-
-//   h6 {
-//     font-size: 1em;
-//   }
-
-//   :is(h1, h2, h3, h4, h5, h6) {
-//     &:not(:first-child) {
-//       margin-top: 32px;
-//     }
-
-//     &:not(:last-child) {
-//       margin-bottom: 20px;
-//     }
-//   }
-
-//   figcaption {
-//     font-size: 75%; // Scales with custom formatting
-//     text-align: center;
-//     padding: 8px 16px 0;
-//   }
-
-//   p {
-//     img:not(.wp-more-tag) {
-//       display: inline-block;
-//       height: auto;
-//       transform: translateY(0.2em);
-//     }
-//   }
 
 //   :is(ul, ol) {
 //     padding-left: 28px;
@@ -180,19 +363,7 @@ body {
 //     }
 //   }
 
-//   code:not([role=textbox]) {
-//     display: inline-block;
-//     background: rgb(0 0 0 / 7%);
-//     font-family: var(--ff-mono);
-//     font-size: .75em;
-//     line-height: inherit;
-//     word-wrap: break-word;
-//     -webkit-box-decoration-break: clone;
-//     box-decoration-break: clone;
-//     padding: .125em .25em;
-//     border-radius: 2px;
-//     transform: translateY(-1px);
-//   }
+
 
 //   acronym,
 //   abbr {
@@ -201,19 +372,7 @@ body {
 //     text-underline-offset: 0.125em;
 //   }
 
-//   kbd {
-//     display: inline-block;
-//     background: rgb(0 0 0 / 7%);
-//     font-family: var(--ff-mono);
-//     font-size: .75em;
-//     font-weight: 700;
-//     letter-spacing: 0;
-//     white-space: nowrap;
-//     padding: 0 0.375em;
-//     border-radius: 3px;
-//     box-shadow: 0 0 1px currentColor, 0 1px 1px rgb(0 0 0 / 20%);
-//     transform: translateY(-1px);
-//   }
+
 
 //   :is(.wp-block-embed, .wp-block-audio, .wp-block-video, .wp-block-table, .wp-block-quote, .wp-block-pullquote, .wp-block-gallery, .wp-block-code, .wp-block-preformatted) {
 //     clear: both;
@@ -426,56 +585,6 @@ body {
 //   }
 
 //   // =============================================================================
-//   // SEPARATORS
-//   // =============================================================================
-
-//   .wp-block-separator {
-//     padding: 0;
-//     margin: 40px auto !important;
-//     border-top: none;
-//     border-bottom: 2px solid;
-//     border-color: #a0a0a0;
-
-//     &:not(.is-style-wide, .is-style-dots) {
-//       width: 128px;
-//       max-width: 75%;
-//     }
-
-//     &.is-style-dots {
-//       text-align: center;
-//       line-height: 1;
-//       border: none;
-
-//       &::before {
-//         content: '···';
-//         color: #a0a0a0;
-//         font-size: 1.5em;
-//         letter-spacing: 2em;
-//         padding-left: 2em;
-//         font-family: serif;
-//       }
-//     }
-//   }
-
-//   // =============================================================================
-//   // ALIGNMENTS
-//   // =============================================================================
-
-//   .wp-block-image.alignleft {
-//     float: left;
-//     margin: 24px 32px 16px 0 !important;
-//   }
-
-//   .wp-block-image.alignright {
-//     float: right;
-//     margin: 24px 0 16px 32px !important;
-//   }
-
-//   .wp-block:is(.alignleft, .alignright) {
-//     max-width: min(30%, 220px);
-//   }
-
-//   // =============================================================================
 //   // TABLES
 //   // =============================================================================
 
@@ -553,20 +662,6 @@ body {
 //           padding: 6px 16px;
 //         }
 //       }
-//     }
-//   }
-
-//   // =============================================================================
-//   // IMAGE BLOCK
-//   // =============================================================================
-
-//   .wp-block-image {
-//     figcaption {
-//       margin: 0;
-//     }
-
-//     .components-resizable-box__container {
-//       display: block;
 //     }
 //   }
 
@@ -696,33 +791,7 @@ body {
 //   // CODE BLOCK
 //   // =============================================================================
 
-//   .wp-block-code {
-//     padding: 1rem;
-//     border-radius: var(--layout-border-radius-small);
-//     overflow: auto;
 
-//     code {
-//       display: block;
-//       font-family: var(--ff-mono);
-//       line-height: 1.7;
-//       white-space: pre !important;
-//       border-radius: var(--layout-border-radius-small);
-//     }
-
-//     &:not([class*=font-size]) {
-//       code {
-//         font-size: var(--fs-xxs);
-//       }
-//     }
-
-//     &:not([class*=background-color]) {
-//       background: #e5e5e5;
-//     }
-
-//     &:not([class*=text-color]) {
-//       color: #444;
-//     }
-//   }
 
 //   // =============================================================================
 //   // PREFORMATTED BLOCK
