--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -20,6 +20,7 @@
   --font-saturation: 1;
   --hue-offset: 0deg; // Overridden by theme customizer
   --hue-rotate: 0deg + var(--hue-offset);
+  --wp--style--block-gap: 2rem;
 
   // === NAVIGATION ============================================================
 
